--- a/Impl/src/main/resources/config.yml
+++ b/Impl/src/main/resources/config.yml
@@ -96,7 +96,21 @@ checks:
         enabled: true
         max-violations: 20
         punish-command: 'ban %player% %prefix% Unfair Advantage'
+      f:
+        enabled: true
+        max-violations: 20
+        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        # max-angle: The maximum offset a player can be looking when they hit a player. From my testing, it tends to be 0.0-0.25 at most. I set this to 0.35 to be safe.
+        # max-buffer: The maximum times a player can violate the check before flagging. Increasing helps reduce false positives.
+        # buffer-decay: The amount the buffer decays when the player passes the check. Increasing this reduces detection but reduces false positives.
+        max-angle: 0.35
+        max-buffer: 8
+        buffer-decay: 1
+
     reach:
+      # Reach Type A: Sophisticated reach check capable of detecting as low as 3.3 reach.
+      # Reach Type B: Simple reach check using buffers, this can only reliably detect 3.7+ reach. However, unlike Reach Type A, it does not rely on ping, making it more resistant to PingSpoof.
+      # Reach Type B also offers faster detection of more blatant reach when players are cheating using PingSpoof. Soon, I will recode using a better check that should detect 3.2 reach.
       a:
         enabled: true
         max-violations: 50
@@ -104,10 +118,19 @@ checks:
         # max-reach: Maximum hit-reach. If you have false flags increase this number to 3.0-6.0.
         # reach-sensitivity: (Scale of 1-5) 1-3 makes the check less prone to false flags. 4-5 increases detection rate.
         # reach-maxlatency: In milliseconds, the maximum ping a player can have before the reach check is disabled.
+        # buffer-decay: How much the buffer decreases if the player gets a hit from a legitimate range.
         # If you are having false positives with lag increase this.
-        max-reach: 3.25
+        max-reach: 3.3
         reach-sensitivity: 4
-        reach-maxlatency: 200
+        reach-maxlatency: 500
+        buffer-decay: 1
+      b:
+        enabled: true
+        max-violations: 50
+        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        max-reach: 3.75
+        max-buffer: 10
+        buffer-decay: 0.5
     velocity:
       # Would recommend leaving this disabled, some falses occur.
       a:
@@ -259,14 +282,20 @@ checks:
         # max-timer-speed: Maximum timer speed, make this higher if you have false positives.
         # min-timer-speed: Minimum timer speed, make this lower if you have false positives.
         # max-buffer: Make this higher to reduce falses, lower to increase detection.
+        # sample-size: Increase this to make more accurate detection, however detection will be slower.
+        # buffer-decay: How much the buffer decays when the player passes the check.
+        # reset-buffer-on-flag: Reset the buffer on flag. If you do, detection will be more stable yet slower.
         max-timer-speed: 1.1
         min-timer-speed: 0.9
         max-buffer: 2
+        sample-size: 20
+        buffer-decay: 1.5
+        reset-buffer-on-flag: true
       b:
         enabled: true
         max-violations: 10
         punish-command: 'kick %player% %prefix% Invalid packet rate.'
         # max-packet-discrepancy: The leniency of the check, recommended to stay in the range of 2-7.
         # max-buffer: Make this higher to reduce falses, lower to increase detection.
-        max-packet-discrepancy: 2
-        max-buffer: 2
+        max-packet-discrepancy: 3
+        max-buffer: 3
