--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,8 @@ buildNumber.properties
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+# some IDE stuff 
+
+.idea/
+.vscode/
+
