--- a/Impl/pom.xml
+++ b/Impl/pom.xml
@@ -61,6 +61,12 @@
             <version>1.6.9</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>io.github.classgraph</groupId>
+            <artifactId>classgraph</artifactId>
+            <version>4.8.90</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
