--- a/Impl/src/main/resources/config.yml
+++ b/Impl/src/main/resources/config.yml
@@ -1,32 +1,35 @@
 ##############################
 #    Medusa Configuration    #
 ##############################
-# This is the configuration file for Medusa Anticheat.
 
-# Anticheat testing mode.
-# If enabled, no punishments will occur and alerts will enable automatically on join.
-#
-testmode: false
-
-# Anticheat response configuration.
-# If you want to change how the anticheat looks/responds, you can do it here.
-#
-response:
-  general:
-    prefix: '&8[&2Medusa&8]'
-    no-permission: '&cNo permission.'
-  command:
-    prefix: '&8[&2Medusa&8]&c'
-    name: 'medusa' # Broken for now, this does not affect anything
-
+# Appearance configuration.
+# If you want to change how Medusa looks, you can do it here.
+appearance:
+  # Theme system.
+  # How to make theme:
+  # Split the string with dollar sign symbol ($)
+  # First, put the name of the Theme (Ex: Medusa)
+  # Then, put $ and space after it (Ex: Medusa$ )
+  #
+  # After this, put the alert format and a $ after it,
+  # followed by a space (Ex: &aMedusa » &f%player% &7failed &f%check% &7(x%vl%)$ )
+  #
+  # Then, put TWO (no more, no less, can be the same)
+  # accent colours you want using the Minecraft colour code symbols (Ex: &a &c)
+  themes:
+    - "Medusa$ &aMedusa » &f%player% &7failed &f%check% &7(x%vl%)$ &a &2"
+    - "Overflow$ &7[&cMedusa&7] %player% flagged &c%check% VL: &c%vl% %dev%$ &c &4"
+    - "Sparky$ &eMedusa &7> &6%player% &7has failed &6%check% &cx%vl%$ &6 &e"
+  # Accent colours. Changes color look of aspects of Medusa.
+  accents:
+    accentOne: '&a'
+    accentTwo: '&2'
 
 violations:
-  # minimum-vl: How much VL the check has to get in order to alert.
-  # alert-format: Alert format for flagging.
-  # clear-violations-delay: Clears violations for all checks every specified time (in minutes)
-  minimum-vl: 5
-  alert-format: '%prefix% &a%player% &2- &a%check% (Type %type%) %dev% &8[&cVL: %vl%&8]'
-  clear-violations-delay: 10
+  alert-format: '&aMedusa » &f%player% &7failed &f%check% &7(x%vl%)'
+  alert-cooldown: 500
+  minimum-vl-to-alert: 10
+  clear-violations-delay: 15
 
 # Check configuration
 # enabled: Turns the check on/off.
@@ -34,291 +37,191 @@ violations:
 # punish-command: Command ran by the server when a player exceeds the specified max-violations.
 checks:
   combat:
-    aim:
+    aimassist:
       a:
         enabled: true
         max-violations: 100
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # combat-only: Run this check only in combat? Doing so may help random false positives.
-        combat-only: false
+        punish-command: ''
       b:
         enabled: true
         max-violations: 100
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # combat-only: Run this check only in combat? Doing so may help random false positives.
-        combat-only: false
+        punish-command: ''
       c:
         enabled: true
         max-violations: 100
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # combat-only: Run this check only in combat? Doing so may help random false positives.
-        combat-only: false
+        punish-command: ''
       d:
         enabled: true
         max-violations: 100
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # combat-only: Run this check only in combat? Doing so may help random false positives.
-        combat-only: false
+        punish-command: ''
       e:
         enabled: true
-        max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # combat-only: Run this check only in combat? Doing so may help random false positives.
-        combat-only: true
+        max-violations: 100
+        punish-command: ''
+      f:
+        enabled: true
+        max-violations: 100
+        punish-command: ''
+      g:
+        enabled: true
+        max-violations: 100
+        punish-command: ''
     autoclicker:
       a:
         enabled: true
         max-violations: 10
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # max-cps: How fast one can click before getting flagged.
-        max-cps: 25
+        punish-command: ''
       b:
         enabled: true
-        max-violations: 100
+        max-violations: 10
         punish-command: ''
     killaura:
       a:
         enabled: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
       b:
         enabled: true
-        max-violations: 200
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        max-violations: 50
+        punish-command: ''
       c:
         enabled: true
-        max-violations: 20
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        max-violations: 50
+        punish-command: ''
       d:
         enabled: true
-        max-violations: 25
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # sample-size: How much data for this check. Going higher means higher stability, but slower detection, vice versa for smaller sample size.
-        # max-accuracy: How accurate the player can be. Set to as high as your sample-size. Higher limit means more stablility.
-        sample-size: 100
-        max-accuracy: 85
+        max-violations: 50
+        punish-command: ''
       e:
         enabled: true
-        max-violations: 20
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-      f:
-        enabled: true
-        max-violations: 100
-        punish-command: 'kick %player% %prefix% Unfair Advantage'
-        # max-angle: The maximum offset a player can be looking when they hit a player. From my testing, it tends to be 0.0-0.25 at most. I set this to 0.35 to be safe.
-        # max-buffer: The maximum times a player can violate the check before flagging. Increasing helps reduce false positives.
-        # buffer-decay: The amount the buffer decays when the player passes the check. Increasing this reduces detection but reduces false positives.
-        max-angle: 0.35
-        max-buffer: 8
-        buffer-decay: 1
-      g:
-        enabled: true
-        max-violations: 20
+        max-violations: 50
         punish-command: ''
-        # max-buffer: The maximum times a player can violate the check before flagging. Increasing helps reduce false positives.
-        # buffer-decay: The amount the buffer decays when the player passes the check. Increasing this reduces detection but reduces false positives.
-        max-buffer: 10
-        buffer-decay: 2
-      h:
-        enabled: true
-        max-violations: 100
-        punish-command: 'kick %player% %prefix% Unfair Advantage'
-    reach:
-      # Reach Type A: Sophisticated reach check capable of detecting as low as 3.3 reach.
-      # Reach Type B: Simple reach check using buffers, this can only reliably detect 3.7+ reach. However, unlike Reach Type A, it does not rely on ping, making it more resistant to PingSpoof.
-      # Reach Type B also offers faster detection of more blatant reach when players are cheating using PingSpoof. Soon, I will recode using a better check that should detect 3.2 reach.
+    hitbox:
       a:
         enabled: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # max-reach: Maximum hit-reach. If you have false flags increase this number to 3.0-6.0.
-        # reach-sensitivity: (Scale of 1-5) 1-3 makes the check less prone to false flags. 4-5 increases detection rate.
-        # reach-maxlatency: In milliseconds, the maximum ping a player can have before the reach check is disabled.
-        # buffer-decay: How much the buffer decreases if the player gets a hit from a legitimate range.
-        # If you are having false positives with lag increase this.
-        max-reach: 3.3
-        reach-sensitivity: 4
-        reach-maxlatency: 500
-        buffer-decay: 1
+        punish-command: ''
       b:
         enabled: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        max-reach: 3.75
-        max-buffer: 10
-        buffer-decay: 0.5
+        punish-command: ''
     velocity:
       a:
         enabled: true
-        max-violations: 100
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-        # max-buffer: The maximum times a player can violate the check before flagging. Increasing helps reduce false positives.
-        # buffer-decay: The amount the buffer decays when the player passes the check. Increasing this reduces detection but reduces false positives.
-        max-buffer: 1.5
-        buffer-decay: 0.5
+        max-violations: 50
+        punish-command: ''
   movement:
     fastclimb:
       a:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-    flight:
+        punish-command: ''
+    fly:
       a:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
       b:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
+      c:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
     jesus:
       a:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-      b:
-        enabled: true
-        setback: true
-        max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-      c:
-        enabled: true
-        setback: true
-        max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
     motion:
       a:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
       b:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
       c:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
       d:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
       e:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-      f:
-        enabled: true
-        setback: false
-        max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-    nofall:
-      a:
-        enabled: true
-        setback: false
-        max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
     speed:
       a:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
       b:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
       c:
         enabled: true
-        setback: true
         max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
+        punish-command: ''
   player:
-    badpackets:
-      a:
-        enabled: true
-        max-violations: 1
-        punish-command: 'kick %player% %prefix% Invalid rotation detected!'
-      b:
-        enabled: true
-        max-violations: 20
-        punish-command: 'kick %player% %prefix% Invalid packets detected! Hacking?'
-      c:
-        enabled: true
-        max-violations: 25
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-      d:
-        enabled: true
-        max-violations: 50
-        punish-command: 'kick %player% %prefix% Invalid packets detected! Hacking?'
-      e:
-        enabled: true
-        max-violations: 50
-        punish-command: 'kick %player% %prefix% Invalid packets detected! Hacking?'
-    inventory:
-      # Highly experimental, would recommend leaving this disabled.
-      a:
-        enabled: false
-        max-violations: 50
-        punish-command: 'ba %player% %prefix% Unfair Advantage'
-      b:
-        enabled: false
-        max-violations: 50
-        punish-command: 'ba %player% %prefix% Unfair Advantage'
-    pingspoof:
-      a:
-        enabled: true
-        max-violations: 100
-        punish-command: 'kick %player% %prefix% Unfair Advantage'
-        # max-ping-difference: The maximum ping difference. Usually legit players hover between 50-100ms, PingSpoof users will be higher. Adjust at your risk.
-        # max-buffer: Making this higher reduces detection, but makes the check less prone to false positives. Lowering this value will do the opposite.
-        max-ping-difference: 500
-        max-buffer: 200
-    scaffold:
-      a:
-        enabled: true
-        max-violations: 25
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-      b:
-        enabled: true
-        max-violations: 75
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
-      c:
-        enabled: false
-        max-violations: 50
-        punish-command: 'ban %player% %prefix% Unfair Advantage'
     timer:
       a:
         enabled: true
-        max-violations: 10
-        punish-command: 'kick %player% %prefix% Invalid packet rate.'
-        # max-timer-speed: Maximum timer speed, make this higher if you have false positives.
-        # min-timer-speed: Minimum timer speed, make this lower if you have false positives.
-        # max-buffer: Make this higher to reduce falses, lower to increase detection.
-        # sample-size: Increase this to make more accurate detection, however detection will be slower.
-        # buffer-decay: How much the buffer decays when the player passes the check.
-        # reset-buffer-on-flag: Reset the buffer on flag. If you do, detection will be more stable yet slower.
-        max-timer-speed: 1.1
-        min-timer-speed: 0.9
-        max-buffer: 2
-        sample-size: 20
-        buffer-decay: 1.5
-        reset-buffer-on-flag: true
+        max-violations: 50
+        punish-command: ''
       b:
         enabled: true
-        max-violations: 10
-        punish-command: 'kick %player% %prefix% Invalid packet rate.'
-        # max-packet-discrepancy: The leniency of the check, recommended to stay in the range of 2-7.
-        # max-buffer: Make this higher to reduce falses, lower to increase detection.
-        max-packet-discrepancy: 3
-        max-buffer: 3
+        max-violations: 50
+        punish-command: ''
+    hand:
+      a:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+      b:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+      c:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+    badpackets:
+      a:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+      b:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+      c:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+      d:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+      e:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+      f:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+    scaffold:
+      a:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
+      b:
+        enabled: true
+        max-violations: 50
+        punish-command: ''
