--- a/Impl/src/main/resources/plugin.yml
+++ b/Impl/src/main/resources/plugin.yml
@@ -1,18 +1,11 @@
 name: Medusa
-version: 1.5
-main: com.gladurbad.medusa.MedusaPlugin
-authors: [GladUrBad]
-description: Medusa Anticheat
+version: 1.4.2-HOTFIX-1
+main: com.gladurbad.medusa.Medusa
+load: STARTUP
+authors: [ GladUrBad ]
+softdepend: [PlaceholderAPI]
 
 commands:
   medusa:
-    description: Commands for Medusa Anticheat.
-    usage: /medusa
-    aliases: [anticheat, ac]
-    permission: medusa.commands
-  alerts:
-    description: Toggles alerts for Medusa Anticheat.
-    usage: /alerts
-    permission: medusa.alerts
-
-
+    description: Medusa Anticheat commands.
+    usage: /<command>
